Fixed horizontal scroll

--- a/styles/custom.css
+++ b/styles/custom.css
@@ -11,3 +11,10 @@
 	width: 30rem;
 	height: 0.3rem
 }
+
+html, body {
+  overflow-x: hidden;
+}
+body {
+  position: relative
+}
